@@ -3,7 +3,7 @@
 use v6;
 
 use Test::Builder::Tester;
-plan 4;
+plan 8;
 
 my $Test = Test::Builder.new();
 
@@ -28,4 +28,20 @@ $Test.diag( "many\nmany\nlines" );
 test_diag( 'many' );
 test_diag( 'many' );
 test_diag( 'lines' );
+test_test( 'failing test with diagnostics' );
+
+test_pass();
+$Test.ok( 1 );
+test_test( 'passing test with no diagnostics' );
+
+test_pass( 'my diagnostics' );
+$Test.ok( 1, 'my diagnostics' );
+test_test( 'passing test with diagnostics' );
+
+test_fail();
+$Test.ok( 0 );
+test_test( 'failing test with no diagnostics' );
+
+test_fail( 'more diagnostics' );
+$Test.ok( 0, 'more diagnostics' );
 test_test( 'failing test with diagnostics' );
